--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a test website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,8 @@
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "react": "^18.0.0",
