--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a test website",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack serve --mode development"
+    "serve": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "mini-css-extract-plugin": "^2.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
