--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
   },
   "dependencies": {
     "@types/node": "^17.0.23",
+    "immer": "^9.0.12",
+    "immutable": "^4.0.0",
     "mini-css-extract-plugin": "^2.6.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "redux": "4.0"
   }
 }
