--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mini-css-extract-plugin": "^2.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "redux": "4.0"
+    "redux": "4.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
