--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.2.5",
     "@types/node": "^17.0.23",
     "immer": "^9.0.12",
     "immutable": "^4.0.0",
