--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "redux": "4.0",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "reselect": "^4.1.5"
   }
 }
